mpesa fix and deployment errors fix #1
